スタート画面へ戻る処理

--- a/app/src/main/res/layout/activity_room_result.xml
+++ b/app/src/main/res/layout/activity_room_result.xml
@@ -202,4 +202,14 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button_result_to_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="スタート画面へ戻る"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line_layout_all" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
