待機画面のデザイン修正

--- a/app/src/main/res/layout/activity_room_choice.xml
+++ b/app/src/main/res/layout/activity_room_choice.xml
@@ -41,7 +41,7 @@
         android:paddingTop="25dp"
         android:paddingRight="70dp"
         android:paddingBottom="25dp"
-        android:text="遊ぶ部屋を選択してください"
+        android:text="遊ぶ部屋を選択して下さい"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -110,7 +110,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/rounded_return_startpage_button"
+        android:background="@drawable/rounded_return_button"
         android:text="スタートに戻る"
         android:textColor="@android:color/white"
         android:textSize="18sp"
