名前を中央に表示

--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -208,37 +208,43 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout_image">
 
         <TextView
-            android:id="@+id/room_answer_user_5"
-            android:layout_width="wrap_content"
+            android:id="@+id/room_answer_user_1"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:layout_weight="1"
             android:text="" />
 
         <TextView
-            android:id="@+id/room_answer_user_1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <TextView
             android:id="@+id/room_answer_user_2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="" />
 
         <TextView
             android:id="@+id/room_answer_user_3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="" />
 
         <TextView
             android:id="@+id/room_answer_user_4"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/room_answer_user_5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
             android:text="" />
 
     </LinearLayout>
