--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -41,10 +41,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/frame_style_black"
         android:text="くろ"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/room_btn_change_color"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -104,6 +105,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_button"
         android:text="消しゴム"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,6 +120,8 @@
         android:background="@drawable/rounded_button"
         android:text="色変更"
         android:visibility="visible"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -129,6 +133,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_button"
         android:text="全消し"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
