--- a/app/src/main/res/layout/activity_startpage.xml
+++ b/app/src/main/res/layout/activity_startpage.xml
@@ -7,31 +7,30 @@
     android:background="@drawable/startpage_background"
     tools:context=".Default.StartpageActivity">
 
-    <TextView
-        android:id="@+id/start_text_title"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="120dp"
-        android:gravity="center_horizontal"
-        android:text="お絵かき対戦"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/start_start_button"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/start_rounded_button"
         android:text="START"
         android:textColor="@android:color/white"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/start_text_title"
-        app:layout_constraintStart_toStartOf="@+id/start_text_title"
-        app:layout_constraintTop_toBottomOf="@+id/start_text_title" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="144dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/oekaki_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
