--- a/app/src/main/res/layout/activity_room_choice.xml
+++ b/app/src/main/res/layout/activity_room_choice.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="72dp"
 
         android:layout_marginStart="16dp"
