--- a/app/src/main/res/layout/activity_room_result.xml
+++ b/app/src/main/res/layout/activity_room_result.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
