--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,29 +22,32 @@
 
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/home_user_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rounded_form"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:paddingLeft="20dp"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/homeUserImage" />
 
     <Button
-        android:id="@+id/start_from_start"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="32dp"
+        android:id="@+id/home_save"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/rounded_button"
         android:text="保存"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/home_user_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
