--- a/app/src/main/res/layout/activity_room_make.xml
+++ b/app/src/main/res/layout/activity_room_make.xml
@@ -5,65 +5,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/startpage_background"
-    tools:context=".Default.HomeActivity">
+    tools:context=".Room.RoomMakeActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/homeUserImage"
+        android:id="@+id/room_male_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="128dp"
         android:background="@drawable/guestuser"
+        app:civ_border_color="#fff"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#fff"/>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/home_user_name"
-        android:layout_width="wrap_content"
+        android:id="@+id/room_make_name"
+        android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/rounded_form"
         android:ems="10"
+        android:hint="部屋の名前を入力してください"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:maxLength="10"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeUserImage" />
+        app:layout_constraintTop_toBottomOf="@+id/room_male_image" />
 
     <Button
-        android:id="@+id/home_save"
-        android:layout_width="120dp"
+        android:id="@+id/room_male_return"
+        android:layout_width="200dp"
         android:layout_height="35dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="52dp"
         android:background="@drawable/rounded_button"
-        android:text="保存"
+        android:text="部屋を作る"
         android:textColor="@android:color/white"
-        android:textSize="16sp"
+        android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/room_make_make"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_user_name" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/home_return"
-        android:layout_width="120dp"
+        android:id="@+id/room_make_make"
+        android:layout_width="200dp"
         android:layout_height="35dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="176dp"
         android:background="@drawable/rounded_return_button"
-        android:text="戻る"
+        android:text="作成をやめる"
         android:textColor="@android:color/white"
-        android:textSize="16sp"
+        android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_save" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
