--- a/app/src/main/res/layout/activity_room_make.xml
+++ b/app/src/main/res/layout/activity_room_make.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/room_male_image" />
 
     <Button
-        android:id="@+id/room_male_return"
+        android:id="@+id/room_make_make"
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginStart="24dp"
@@ -49,13 +49,13 @@
         android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/room_make_make"
+        app:layout_constraintBottom_toTopOf="@+id/room_make_return"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/room_make_make"
+        android:id="@+id/room_make_return"
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginStart="24dp"
