--- a/app/src/main/res/layout/activity_room_select.xml
+++ b/app/src/main/res/layout/activity_room_select.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/select_btn_back"
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:srcCompat="@drawable/abc_vector_test" />
@@ -30,6 +30,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:text="部屋を選んでください"
